stepping through errors within cost function
Former-commit-id: e8dcb7f1ba4311229775eb40fdaa6c3d856b5a04

--- a/examples/site-specific/cancer-care-associates/production/Winston Lutz/prototyping/tf_model/000-attempt-arbitrary-shape-encoder.ipynb
+++ b/examples/site-specific/cancer-care-associates/production/Winston Lutz/prototyping/tf_model/000-attempt-arbitrary-shape-encoder.ipynb
@@ -7,6 +7,7 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "import datetime\n",
     "import warnings\n",
     "\n",
     "import numpy as np\n",
@@ -197,7 +198,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_small_batch = create_pipeline_dataset(2)\n",
+    "dataset_small_batch = create_pipeline_dataset(4)\n",
     "\n",
     "sample_image = None\n",
     "\n",
@@ -336,6 +337,111 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# def extract_parameters(tensor_parameters):\n",
+    "#     parameters = {\n",
+    "#         'field_centre': (tensor_parameters[0], tensor_parameters[1]),\n",
+    "#         'field_side_lengths': (tensor_parameters[2], tensor_parameters[3]),\n",
+    "#         'field_rotation': tensor_parameters[4] * 180,\n",
+    "#         'bb_centre': (tensor_parameters[5], tensor_parameters[6]),\n",
+    "#         'bb_diameter': tensor_parameters[7]\n",
+    "#     }\n",
+    "    \n",
+    "#     return parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def determine_diff_rotation_and_flipped(predicted_parameters, ground_truth_parameters):\n",
+    "    \"\"\"Account for the fact that flipped edge lengths is equivalent to a 90 degree rotation\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    predicted_rotations = predicted_parameters[:, 4] * 180\n",
+    "    ground_truth_rotations = ground_truth_parameters[:, 4] * 180\n",
+    "    \n",
+    "    predicted_field_side_lengths = tf.stack([predicted_parameters[:, 2], predicted_parameters[:, 3]])\n",
+    "    ground_truth_field_side_lengths = tf.stack([ground_truth_parameters[:, 2], ground_truth_parameters[:, 3]])\n",
+    "    \n",
+    "    diff_rotation = (predicted_rotations - ground_truth_rotations) % 180\n",
+    "    diff_rotation = tf.reduce_min(tf.stack([diff_rotation, 180 - diff_rotation]), axis=0)\n",
+    "    \n",
+    "    diff_field_side_lengths = tf.reduce_sum(\n",
+    "        tf.abs(predicted_field_side_lengths - ground_truth_field_side_lengths),\n",
+    "        axis=-1\n",
+    "    )\n",
+    "    \n",
+    "#     print(ground_truth_field_side_lengths)\n",
+    "#     print(tf.reverse(\n",
+    "#             ground_truth_field_side_lengths, [0]))\n",
+    "    diff_field_side_lengths_flipped = tf.reduce_sum(\n",
+    "        tf.abs(predicted_field_side_lengths - tf.reverse(\n",
+    "            ground_truth_field_side_lengths, [0])),\n",
+    "        axis=-1\n",
+    "    )\n",
+    "    \n",
+    "    diff_rotation_flipped = (predicted_rotations - ground_truth_rotations + 90) % 180\n",
+    "    diff_rotation_flipped = tf.reduce_min(\n",
+    "        tf.stack([diff_rotation_flipped, 180 - diff_rotation_flipped]), \n",
+    "        axis=0\n",
+    "    )\n",
+    "    \n",
+    "    diff_rotation_and_field_sides = tf.reduce_min(tf.stack([\n",
+    "        diff_rotation + diff_field_side_lengths, \n",
+    "        diff_rotation_flipped + diff_field_side_lengths_flipped\n",
+    "    ]), axis=0)\n",
+    "    \n",
+    "    return diff_rotation_and_field_sides"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cost_function(predicted_parameters, ground_truth_parameters):\n",
+    "    \n",
+    "    diff_rotation_and_field_sides = determine_diff_rotation_and_flipped(\n",
+    "        predicted_parameters, ground_truth_parameters)\n",
+    "    \n",
+    "    remaining_predicted = tf.concat([predicted_parameters[:, 0:2], predicted_parameters[5::]])\n",
+    "    remaining_ground_truth = tf.concat([ground_truth_parameters[:, 0:2], ground_truth_parameters[5::]])\n",
+    "    \n",
+    "    remaining_diff = tf.abs(remaining_predicted - remaining_ground_truth)\n",
+    "    \n",
+    "    diff = tf.concat([diff_rotation_and_field_sides, remaining_diff])\n",
+    "    loss = tf.reduce_mean(diff, axis=-1)\n",
+    "\n",
+    "    return loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for parameters, img in dataset_small_batch.take(1):\n",
+    "    print(parameters)\n",
+    "    print(cost_function(parameters, parameters))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
@@ -373,101 +479,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# tf.train.Checkpoint?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# [field_centre, field_side_lengths, [field_rotation_raw], bb_centre, [bb_diameter]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# for image, mask, encoding in train_dataset.take(10):\n",
-    "#     field_centre, field_rotation, bb_centre = extract_items_from_encoding(encoding)\n",
-    "    \n",
-    "#     fig, axs = pymedphys._wlutz.reporting.image_analysis_figure(\n",
-    "#         x, y, np.array(image)[:,:,0],\n",
-    "#         np.array(bb_centre), np.array(field_centre), np.array(field_rotation),\n",
-    "#         bb_diameter, edge_lengths, penumbra, units=''\n",
-    "#     )\n",
-    "    \n",
-    "#     plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def generate_images(model, image, ground_truth_encoding):\n",
-    "    predicted_encoding = model(image, training=True)\n",
-    "    \n",
-    "    predicted_field_centre = [predicted_encoding[0, 0, 0, 0], predicted_encoding[0, 0, 0, 1]]\n",
-    "    predicted_field_rotation = predicted_encoding[0, 0, 0, 2] * 90\n",
-    "    predicted_bb_centre = [predicted_encoding[0, 0, 0, 3], predicted_encoding[0, 0, 0, 4]]\n",
-    "    \n",
-    "    ground_field_centre = [ground_truth_encoding[0], ground_truth_encoding[1]]\n",
-    "    ground_field_rotation = ground_truth_encoding[2] * 90\n",
-    "    ground_bb_centre = [ground_truth_encoding[3], ground_truth_encoding[4]]\n",
-    "    \n",
-    "    fig, axs = pymedphys._wlutz.reporting.image_analysis_figure(\n",
-    "        x, y, np.array(image)[0,:,:,0],\n",
-    "        np.array(ground_bb_centre), np.array(ground_field_centre), np.array(ground_field_rotation),\n",
-    "        bb_diameter, edge_lengths, penumbra, units=''\n",
-    "    )\n",
-    "    axs[0,0].set_title(\"Ground Truth\")\n",
-    "    \n",
-    "    fig, axs = pymedphys._wlutz.reporting.image_analysis_figure(\n",
-    "        x, y, np.array(image)[0,:,:,0],\n",
-    "        np.array(predicted_bb_centre), np.array(predicted_field_centre), np.array(predicted_field_rotation),\n",
-    "        bb_diameter, edge_lengths, penumbra, units=''\n",
-    "    )\n",
-    "    axs[0,0].set_title(\"Predicted\")\n",
-    "\n",
-    "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for image, mask, encoding in test_dataset.take(1):\n",
-    "    generate_images(generator, image, encoding)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import datetime\n",
     "log_dir=\"logs/\"\n",
     "\n",
     "summary_writer = tf.summary.create_file_writer(\n",
@@ -479,35 +490,49 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "@tf.function\n",
     "def train_step(input_image, target_mask, target_encoding, epoch):\n",
-    "    with tf.GradientTape() as gen_tape, tf.GradientTape() as disc_tape:\n",
-    "        gen_output = generator(input_image, training=True)\n",
+    "    with tf.GradientTape() as tape:\n",
+    "        model_output = model(input_image, training=True)\n",
     "        \n",
     "        gen_output_image = decode_batch(gen_output)\n",
     "\n",
-    "        disc_real_output = discriminator([input_image, target_mask], training=True)\n",
-    "        disc_generated_output = discriminator([input_image, gen_output_image], training=True)\n",
+    "        loss = cost_function(disc_generated_output, gen_output, target_encoding)\n",
     "\n",
-    "        gen_total_loss, gen_gan_loss, gen_l1_loss = generator_loss(disc_generated_output, gen_output, target_encoding)\n",
-    "        disc_loss = discriminator_loss(disc_real_output, disc_generated_output)\n",
-    "\n",
-    "    generator_gradients = gen_tape.gradient(gen_total_loss,\n",
-    "                                          generator.trainable_variables)\n",
-    "    discriminator_gradients = disc_tape.gradient(disc_loss,\n",
-    "                                               discriminator.trainable_variables)\n",
-    "\n",
-    "    generator_optimizer.apply_gradients(zip(generator_gradients,\n",
-    "                                          generator.trainable_variables))\n",
-    "    discriminator_optimizer.apply_gradients(zip(discriminator_gradients,\n",
-    "                                              discriminator.trainable_variables))\n",
+    "    gradients = tape.gradient(loss, model.trainable_variables)\n",
+    "    optimizer.apply_gradients(zip(gradients, model.trainable_variables))\n",
     "\n",
     "    with summary_writer.as_default():\n",
-    "        tf.summary.scalar('gen_total_loss', gen_total_loss, step=epoch)\n",
-    "        tf.summary.scalar('gen_gan_loss', gen_gan_loss, step=epoch)\n",
-    "        tf.summary.scalar('gen_l1_loss', gen_l1_loss, step=epoch)\n",
-    "        tf.summary.scalar('disc_loss', disc_loss, step=epoch)"
+    "        tf.summary.scalar('loss', loss, step=epoch)"
    ]
   },
   {
@@ -558,30 +583,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def generator_loss(disc_generated_output, gen_output, target):   \n",
-    "    rotation_target = target[2] * 90\n",
-    "    rotation_predicted = gen_output[0,0,0,2] * 90\n",
-    "    \n",
-    "    diff_rotation = (rotation_target - rotation_predicted) % 180\n",
-    "    diff_rotation = tf.reduce_min([diff_rotation, 180 - diff_rotation])\n",
-    "    reshaped_rotation_diff = tf.reshape(diff_rotation / 90, (-1,))\n",
-    "    \n",
-    "    positions_target = tf.concat((target[0:2], target[3::]), axis=0)\n",
-    "    positions_predicted = tf.concat((gen_output[0,0,0,0:2], gen_output[0,0,0,3::]), axis=-1)\n",
-    "    \n",
-    "    diff_positions = tf.abs(positions_target - positions_predicted)\n",
-    "    diff = tf.concat([diff_positions, reshaped_rotation_diff], axis=0)\n",
-    "    \n",
-    "    gan_loss = loss_object(tf.ones_like(disc_generated_output), disc_generated_output)\n",
-    "\n",
-    "    # mean absolute error\n",
-    "    l1_loss = tf.reduce_mean(diff)\n",
-    "\n",
-    "    total_gen_loss = gan_loss + (LAMBDA * l1_loss)\n",
-    "\n",
-    "    return total_gen_loss, gan_loss, l1_loss"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
