model training is running
Former-commit-id: 245f622a0a740dbc9ded7a0ea78bb39f790baef8 [formerly 9f337c95143cfc37b425e734c6c8e00f311c5940]
Former-commit-id: dcd8b9413057f823212e1928ad242cc99be7fbf8

--- a/examples/site-specific/cancer-care-associates/production/Winston Lutz/prototyping/tf_model/000-attempt-arbitrary-shape-encoder.ipynb
+++ b/examples/site-specific/cancer-care-associates/production/Winston Lutz/prototyping/tf_model/000-attempt-arbitrary-shape-encoder.ipynb
@@ -7,8 +7,11 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "import time\n",
     "import datetime\n",
     "import warnings\n",
+    "\n",
+    "import IPython\n",
     "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -198,14 +201,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_small_batch = create_pipeline_dataset(4)\n",
+    "test_dataset = create_pipeline_dataset(2)\n",
     "\n",
-    "sample_image = None\n",
-    "\n",
-    "for parameters, img in dataset_small_batch.take(3):\n",
-    "    if sample_image is None:\n",
-    "        sample_image = img\n",
-    "    \n",
+    "for parameters, img in test_dataset.take(3):    \n",
     "    dim = img.shape\n",
     "    print(dim)\n",
     "    for i in range(dim[0]):        \n",
@@ -213,41 +211,6 @@
     "        plt.pcolormesh(img[i, :, :])\n",
     "        plt.axis('equal')\n",
     "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset = create_pipeline_dataset(50)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sample_image"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_output = model(sample_image, training=False)\n",
-    "print(model_output)"
    ]
   },
   {
@@ -321,7 +284,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for parameters, img in dataset_small_batch.take(1):\n",
+    "for parameters, img in test_dataset.take(1):\n",
     "    results_figures(model, img, parameters)"
    ]
   },
@@ -437,7 +400,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for parameters, img in dataset_small_batch.take(1):\n",
+    "for parameters, img in test_dataset.take(1):\n",
     "    print(parameters)\n",
     "    print(cost_function(parameters, parameters))"
    ]
@@ -525,19 +488,25 @@
    "outputs": [],
    "source": [
     "@tf.function\n",
-    "def train_step(input_image, target_mask, target_encoding, epoch):\n",
+    "def train_step(ground_truth_parameters, input_image):\n",
     "    with tf.GradientTape() as tape:\n",
-    "        model_output = model(input_image, training=True)\n",
-    "        \n",
-    "        gen_output_image = decode_batch(gen_output)\n",
-    "\n",
-    "        loss = cost_function(disc_generated_output, gen_output, target_encoding)\n",
+    "        predicted_parameters = model(input_image, training=True)\n",
+    "        loss = cost_function(predicted_parameters, ground_truth_parameters)\n",
     "\n",
     "    gradients = tape.gradient(loss, model.trainable_variables)\n",
     "    optimizer.apply_gradients(zip(gradients, model.trainable_variables))\n",
     "\n",
-    "    with summary_writer.as_default():\n",
-    "        tf.summary.scalar('loss', loss, step=epoch)"
+    "#     with summary_writer.as_default():\n",
+    "#         tf.summary.scalar('loss', loss, step=epoch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# IPython.display.clear_output?"
    ]
   },
   {
@@ -550,20 +519,13 @@
     "    for epoch in range(epochs):\n",
     "        start = time.time()\n",
     "\n",
-    "        IPython.display.clear_output(wait=True)\n",
+    "#         IPython.display.clear_output(wait=True)\n",
     "\n",
-    "        for example_input, example_target_image, example_target_encoding in test_ds.take(1):\n",
-    "            generate_images(generator, example_input, example_target_encoding)\n",
-    "        print(\"Epoch: \", epoch)\n",
+    "        for parameters, img in test_ds.take(1):\n",
+    "            results_figures(model, img, parameters)\n",
     "\n",
-    "        # Train\n",
-    "        for n, (input_image, target_mask, target_encoding) in train_ds.enumerate():\n",
-    "            print('.', end='')\n",
-    "            if (n+1) % 100 == 0:\n",
-    "                print()\n",
-    "            train_step(input_image, target_mask, target_encoding, epoch)\n",
-    "        print()\n",
-    "\n",
+    "        train_step(parameters, img)\n",
+    "        \n",
     "        # saving (checkpoint) the model every 20 epochs\n",
     "        if (epoch + 1) % 20 == 0:\n",
     "            checkpoint.save(file_prefix = checkpoint_prefix)\n",
@@ -596,7 +558,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "LAMBDA = 1/30\n",
+    "# LAMBDA = 1/30\n",
     "EPOCHS = 150"
    ]
   },
@@ -606,6 +568,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "test_dataset = create_pipeline_dataset(1)\n",
+    "train_dataset = create_pipeline_dataset(300)\n",
     "fit(train_dataset, EPOCHS, test_dataset)"
    ]
   },
@@ -615,57 +579,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# x = np.arange(0, IMG_SIZE)\n",
-    "# y = np.arange(0, IMG_SIZE)\n",
-    "\n",
-    "# for image, mask, _ in train_dataset.take(1):\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# x = np.arange(0, IMG_SIZE)\n",
-    "# y = np.arange(0, IMG_SIZE)\n",
-    "\n",
-    "# for image, mask, encoding in train_dataset.take(10):\n",
-    "#     field_centre, field_rotation, bb_centre = extract_items_from_encoding(encoding)\n",
-    "    \n",
-    "#     fig, axs = pymedphys._wlutz.reporting.image_analysis_figure(\n",
-    "#         x, y, np.array(image)[:,:,0],\n",
-    "#         np.array(bb_centre), np.array(field_centre), np.array(field_rotation),\n",
-    "#         bb_diameter, edge_lengths, penumbra, units=''\n",
-    "#     )\n",
-    "\n",
-    "#     plt.contour(x, y, mask[:,:,0], [0], cmap='bwr_r', zorder=20)\n",
-    "#     plt.contour(x, y, mask[:,:,1], [0], cmap='bwr_r', zorder=20)\n",
-    "    \n",
-    "#     plt.show()"
-   ]
   }
  ],
  "metadata": {
