attempting concrete train step
Former-commit-id: a6fec80586d613e11b26d7e71578344993c2596b [formerly f12289fd3c47b312de4b51ad464f5062bdf2162f]
Former-commit-id: d03f1964aa09efd2d6fd2963ba04be09ae1c3b94

--- a/examples/site-specific/cancer-care-associates/production/Winston Lutz/prototyping/tf_model/000-attempt-arbitrary-shape-encoder.ipynb
+++ b/examples/site-specific/cancer-care-associates/production/Winston Lutz/prototyping/tf_model/000-attempt-arbitrary-shape-encoder.ipynb
@@ -342,7 +342,7 @@
     "    diff_rotation = tf.reduce_min(tf.stack([diff_rotation, 180 - diff_rotation]), axis=0)\n",
     "    \n",
     "    diff_field_side_lengths = tf.reduce_sum(\n",
-    "        tf.abs(predicted_field_side_lengths - ground_truth_field_side_lengths),\n",
+    "        (predicted_field_side_lengths - ground_truth_field_side_lengths)**2,\n",
     "        axis=0\n",
     "    )\n",
     "    \n",
@@ -350,8 +350,10 @@
     "#     print(tf.reverse(\n",
     "#             ground_truth_field_side_lengths, [0]))\n",
     "    diff_field_side_lengths_flipped = tf.reduce_sum(\n",
-    "        tf.abs(predicted_field_side_lengths - tf.reverse(\n",
-    "            ground_truth_field_side_lengths, [0])),\n",
+    "        (\n",
+    "            predicted_field_side_lengths - tf.reverse(\n",
+    "            ground_truth_field_side_lengths, [0])\n",
+    "        )**2,\n",
     "        axis=0\n",
     "    )\n",
     "    \n",
@@ -367,8 +369,8 @@
     "#     print(diff_field_side_lengths_flipped)\n",
     "    \n",
     "    diff_rotation_and_field_sides = tf.reduce_min(tf.stack([\n",
-    "        diff_rotation + diff_field_side_lengths,\n",
-    "        diff_rotation_flipped + diff_field_side_lengths_flipped\n",
+    "        diff_rotation**2 + diff_field_side_lengths,\n",
+    "        diff_rotation_flipped**2 + diff_field_side_lengths_flipped\n",
     "    ]), axis=0)\n",
     "    \n",
     "    return diff_rotation_and_field_sides"
@@ -388,10 +390,10 @@
     "    remaining_predicted = tf.concat([predicted_parameters[:, 0:2], predicted_parameters[:, 5::]], axis=-1)\n",
     "    remaining_ground_truth = tf.concat([ground_truth_parameters[:, 0:2], ground_truth_parameters[:, 5::]], axis=-1)\n",
     "    \n",
-    "    remaining_diff = tf.abs(remaining_predicted - remaining_ground_truth)\n",
+    "    remaining_diff = (remaining_predicted - remaining_ground_truth)**2\n",
     "    \n",
     "    diff = tf.concat([diff_rotation_and_field_sides[:, None], remaining_diff], axis=-1)\n",
-    "    loss = tf.reduce_mean(diff, axis=-1)\n",
+    "    loss = tf.reduce_sum(diff, axis=-1)\n",
     "\n",
     "    return loss"
    ]
@@ -448,49 +450,51 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "log_dir=\"logs/\"\n",
+    "BATCH_SIZE = 10\n",
     "\n",
-    "summary_writer = tf.summary.create_file_writer(\n",
-    "  log_dir + \"fit/\" + datetime.datetime.now().strftime(\"%Y%m%d-%H%M%S\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
+    "test_dataset = create_pipeline_dataset(1)\n",
+    "train_dataset = create_pipeline_dataset(BATCH_SIZE)\n",
+    "\n",
+    "\n",
     "@tf.function(experimental_relax_shapes=True)\n",
-    "def train_step(ground_truth_parameters, input_image, epoch):\n",
+    "def train_step(ground_truth_parameters, input_image, logging_index):\n",
     "    with tf.GradientTape() as tape:\n",
     "        predicted_parameters = model(input_image, training=True)\n",
     "        loss = cost_function(predicted_parameters, ground_truth_parameters)\n",
@@ -501,16 +505,14 @@
     "    reduced_loss = tf.reduce_mean(loss)\n",
     "\n",
     "    with summary_writer.as_default():\n",
-    "        tf.summary.scalar('loss', reduced_loss, step=epoch)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# IPython.display.clear_output?"
+    "        tf.summary.scalar('loss', reduced_loss, step=logging_index)\n",
+    "        \n",
+    "        \n",
+    "concrete_train_step = train_step.get_concrete_function(\n",
+    "    tf.TensorSpec(shape=[BATCH_SIZE, 8], dtype=tf.float32), \n",
+    "    tf.TensorSpec(shape=[BATCH_SIZE, None, None], dtype=tf.float32),\n",
+    "    tf.TensorSpec(shape=[], dtype=tf.int64)\n",
+    ")"
    ]
   },
   {
@@ -520,6 +522,8 @@
    "outputs": [],
    "source": [
     "def fit(train_ds, epochs, test_ds):\n",
+    "    logging_index = tf.convert_to_tensor(0, dtype=tf.int64)\n",
+    "    \n",
     "    for epoch in range(epochs):\n",
     "        start = time.time()\n",
     "\n",
@@ -528,7 +532,8 @@
     "\n",
     "        iters_per_epoch = 10\n",
     "        for parameters, img in tqdm.tqdm(train_ds.take(iters_per_epoch), total=iters_per_epoch):\n",
-    "            train_step(parameters, img, epoch)\n",
+    "            logging_index += 1\n",
+    "            concrete_train_step(parameters, img, logging_index)\n",
     "        \n",
     "        if (epoch + 1) % 20 == 0:\n",
     "            checkpoint.save(file_prefix = checkpoint_prefix)\n",
@@ -536,15 +541,6 @@
     "        print ('Time taken for epoch {} is {} sec\\n'.format(epoch + 1,\n",
     "                                                            time.time()-start))\n",
     "    checkpoint.save(file_prefix = checkpoint_prefix)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# tqdm.tqdm?"
    ]
   },
   {
@@ -561,28 +557,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# LAMBDA = 1/30\n",
-    "EPOCHS = 150"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_dataset = create_pipeline_dataset(1)\n",
-    "train_dataset = create_pipeline_dataset(10)\n",
+    "EPOCHS = 150\n",
+    "\n",
+    "log_dir=\"logs/\"\n",
+    "summary_writer = tf.summary.create_file_writer(\n",
+    "  log_dir + \"fit/\" + datetime.datetime.now().strftime(\"%Y%m%d-%H%M%S\"))\n",
+    "\n",
     "fit(train_dataset, EPOCHS, test_dataset)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
