--- a/examples/site-specific/cancer-care-associates/production/Winston Lutz/prototyping/tf_model/000-attempt-arbitrary-shape-encoder.ipynb
+++ b/examples/site-specific/cancer-care-associates/production/Winston Lutz/prototyping/tf_model/000-attempt-arbitrary-shape-encoder.ipynb
@@ -302,18 +302,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# def extract_parameters(tensor_parameters):\n",
-    "#     parameters = {\n",
-    "#         'field_centre': (tensor_parameters[0], tensor_parameters[1]),\n",
-    "#         'field_side_lengths': (tensor_parameters[2], tensor_parameters[3]),\n",
-    "#         'field_rotation': tensor_parameters[4] * 180,\n",
-    "#         'bb_centre': (tensor_parameters[5], tensor_parameters[6]),\n",
-    "#         'bb_diameter': tensor_parameters[7]\n",
-    "#     }\n",
-    "    \n",
-    "#     return parameters"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -383,7 +372,6 @@
    "outputs": [],
    "source": [
     "def cost_function(predicted_parameters, ground_truth_parameters):\n",
-    "    \n",
     "    diff_rotation_and_field_sides = determine_diff_rotation_and_flipped(\n",
     "        predicted_parameters, ground_truth_parameters)\n",
     "    \n",
@@ -429,7 +417,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "loss_object = tf.keras.losses.BinaryCrossentropy(from_logits=True)\n",
     "optimizer = tf.keras.optimizers.Adam(2e-4, beta_1=0.5)"
    ]
   },
@@ -457,28 +444,62 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# def extract_parameters(tensor_parameters):\n",
+    "#     parameters = {\n",
+    "#         'field_centre': (tensor_parameters[0], tensor_parameters[1]),\n",
+    "#         'field_side_lengths': (tensor_parameters[2], tensor_parameters[3]),\n",
+    "#         'field_rotation': tensor_parameters[4] * 180,\n",
+    "#         'bb_centre': (tensor_parameters[5], tensor_parameters[6]),\n",
+    "#         'bb_diameter': tensor_parameters[7]\n",
+    "#     }\n",
+    "    \n",
+    "#     return parameters"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "def training_focus(predicted_parameters, ground_truth_parameters, focus):\n",
+    "    new_predicted_parameters = tf.identity(ground_truth_parameters)\n",
+    "    \n",
+    "    if focus == 'field_centre':        \n",
+    "        new_predicted_parameters = tf.concat([\n",
+    "            predicted_parameters[:, 0:2], ground_truth_parameters[:, 2::]\n",
+    "        ], axis=-1)\n",
+    "    \n",
+    "    elif focus == 'field_side_lengths':\n",
+    "        new_predicted_parameters = tf.concat([\n",
+    "            ground_truth_parameters[:, 0:2], \n",
+    "            predicted_parameters[:, 2:4], \n",
+    "            ground_truth_parameters[:, 4::]\n",
+    "        ], axis=-1)\n",
+    "        \n",
+    "    elif focus == 'field_rotation':\n",
+    "        new_predicted_parameters = tf.concat([\n",
+    "            ground_truth_parameters[:, 0:4], \n",
+    "            predicted_parameters[:, 4:5], \n",
+    "            ground_truth_parameters[:, 5::]\n",
+    "        ], axis=-1)\n",
+    "        \n",
+    "    elif focus == 'bb_centre':        \n",
+    "        new_predicted_parameters = tf.concat([\n",
+    "            ground_truth_parameters[:, 0:5], \n",
+    "            predicted_parameters[:, 5:7], \n",
+    "            ground_truth_parameters[:, 7::]\n",
+    "        ], axis=-1)\n",
+    "        \n",
+    "    elif focus == 'bb_diameter':\n",
+    "        new_predicted_parameters = tf.concat([\n",
+    "            ground_truth_parameters[:, 0:7], \n",
+    "            predicted_parameters[:, 7::],\n",
+    "        ], axis=-1)    \n",
+    "        \n",
+    "    return new_predicted_parameters"
+   ]
   },
   {
    "cell_type": "code",
@@ -488,30 +509,31 @@
    "source": [
     "BATCH_SIZE = 10\n",
     "\n",
-    "\n",
     "test_dataset = create_pipeline_dataset(1)\n",
     "train_dataset = create_pipeline_dataset(BATCH_SIZE)\n",
     "\n",
     "\n",
     "@tf.function(experimental_relax_shapes=True)\n",
-    "def train_step(ground_truth_parameters, input_image, logging_index):\n",
+    "def train_step(ground_truth_parameters, input_image):\n",
+    "    FOCUS = 'bb_centre'\n",
+    "    \n",
     "    with tf.GradientTape() as tape:\n",
     "        predicted_parameters = model(input_image, training=True)\n",
-    "        loss = cost_function(predicted_parameters, ground_truth_parameters)\n",
+    "        new_predicted_parameters = training_focus(\n",
+    "            predicted_parameters, ground_truth_parameters, FOCUS)\n",
+    "        \n",
+    "        loss = cost_function(new_predicted_parameters, ground_truth_parameters)\n",
     "\n",
     "    gradients = tape.gradient(loss, model.trainable_variables)\n",
     "    optimizer.apply_gradients(zip(gradients, model.trainable_variables))\n",
     "    \n",
     "    reduced_loss = tf.reduce_mean(loss)\n",
-    "\n",
-    "    with summary_writer.as_default():\n",
-    "        tf.summary.scalar('loss', reduced_loss, step=logging_index)\n",
+    "    return reduced_loss\n",
     "        \n",
     "        \n",
     "concrete_train_step = train_step.get_concrete_function(\n",
     "    tf.TensorSpec(shape=[BATCH_SIZE, 8], dtype=tf.float32), \n",
-    "    tf.TensorSpec(shape=[BATCH_SIZE, None, None], dtype=tf.float32),\n",
-    "    tf.TensorSpec(shape=[], dtype=tf.int64)\n",
+    "    tf.TensorSpec(shape=[BATCH_SIZE, None, None], dtype=tf.float32)\n",
     ")"
    ]
   },
@@ -532,8 +554,12 @@
     "\n",
     "        iters_per_epoch = 10\n",
     "        for parameters, img in tqdm.tqdm(train_ds.take(iters_per_epoch), total=iters_per_epoch):\n",
+    "            reduced_loss = concrete_train_step(parameters, img)\n",
+    "            \n",
     "            logging_index += 1\n",
-    "            concrete_train_step(parameters, img, logging_index)\n",
+    "            with summary_writer.as_default():\n",
+    "                tf.summary.scalar('loss', reduced_loss, step=logging_index)\n",
+    "            \n",
     "        \n",
     "        if (epoch + 1) % 20 == 0:\n",
     "            checkpoint.save(file_prefix = checkpoint_prefix)\n",
