--- a/examples/site-specific/cancer-care-associates/production/Winston Lutz/prototyping/tf_model/000-attempt-arbitrary-shape-encoder.ipynb
+++ b/examples/site-specific/cancer-care-associates/production/Winston Lutz/prototyping/tf_model/000-attempt-arbitrary-shape-encoder.ipynb
@@ -194,7 +194,9 @@
     "\n",
     "    dataset = dataset.repeat().batch(batch_size)\n",
     "    \n",
-    "    return dataset"
+    "    return dataset\n",
+    "\n",
+    "test_dataset = create_pipeline_dataset(1)"
    ]
   },
   {
@@ -203,9 +205,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_dataset = create_pipeline_dataset(2)\n",
+    "batch_two_dataset = create_pipeline_dataset(2)\n",
     "\n",
-    "for parameters, img in test_dataset.take(3):    \n",
+    "for parameters, img in batch_two_dataset.take(3):    \n",
     "    dim = img.shape\n",
     "    print(dim)\n",
     "    for i in range(dim[0]):        \n",
@@ -302,7 +304,53 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# def extract_parameters(tensor_parameters):\n",
+    "#     parameters = {\n",
+    "#         'field_centre': (tensor_parameters[0], tensor_parameters[1]),\n",
+    "#         'field_side_lengths': (tensor_parameters[2], tensor_parameters[3]),\n",
+    "#         'field_rotation': tensor_parameters[4] * 180,\n",
+    "#         'bb_centre': (tensor_parameters[5], tensor_parameters[6]),\n",
+    "#         'bb_diameter': tensor_parameters[7]\n",
+    "#     }\n",
+    "    \n",
+    "#     return parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def flip_parameters(parameters):\n",
+    "    new_parameters = tf.concat([\n",
+    "        parameters[:, 0:2],\n",
+    "        parameters[:, 3:4],\n",
+    "        parameters[:, 2:3],\n",
+    "        parameters[:, 4:5] + 0.5,\n",
+    "        parameters[:, 5::]\n",
+    "    ], axis=-1)\n",
+    "    \n",
+    "    return new_parameters\n",
+    "\n",
+    "\n",
+    "for parameters, img in test_dataset.take(1):\n",
+    "    flipped_parameters = flip_parameters(parameters)\n",
+    "    \n",
+    "    print(parameters)\n",
+    "    print(flipped_parameters)\n",
+    "    \n",
+    "    batch_dim = img.shape\n",
+    "    num_batches = batch_dim[0]\n",
+    "    \n",
+    "    for i in range(num_batches):\n",
+    "        fig, axs = create_figure(img[i,:,:], **extract_parameters(parameters[i,:]))\n",
+    "        axs[0,0].set_title(\"Original\")\n",
+    "\n",
+    "        fig, axs = create_figure(img[i,:,:], **extract_parameters(flipped_parameters[i,:]))\n",
+    "        axs[0,0].set_title(\"Flipped\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -320,6 +368,9 @@
     "def determine_diff_rotation_and_flipped(predicted_parameters, ground_truth_parameters):\n",
     "    \"\"\"Account for the fact that flipped edge lengths is equivalent to a 90 degree rotation\n",
     "    \"\"\"\n",
+    "    \n",
+    "    flipped_prediction_parameters = \n",
+    "    \n",
     "    \n",
     "    predicted_rotations = predicted_parameters[:, 4] * 180\n",
     "    ground_truth_rotations = ground_truth_parameters[:, 4] * 180\n",
@@ -356,13 +407,33 @@
     "#     print(diff_field_side_lengths)\n",
     "#     print(diff_rotation_flipped)\n",
     "#     print(diff_field_side_lengths_flipped)\n",
+    "\n",
+    "    non_flipped = diff_rotation**2 + diff_field_side_lengths\n",
+    "    flipped = diff_rotation_flipped**2 + diff_field_side_lengths_flipped\n",
+    "\n",
+    "    if flipped > non_flipped:\n",
+    "        return predicted_parameters - ground_truth_parameters\n",
+    "    else:\n",
+    "        \n",
+    "        \n",
+    "        return \n",
     "    \n",
     "    diff_rotation_and_field_sides = tf.reduce_min(tf.stack([\n",
     "        diff_rotation**2 + diff_field_side_lengths,\n",
     "        diff_rotation_flipped**2 + diff_field_side_lengths_flipped\n",
     "    ]), axis=0)\n",
     "    \n",
-    "    return diff_rotation_and_field_sides"
+    "    return diff_rotation_and_field_sides\n",
+    "\n",
+    "\n",
+    "\n",
+    "for ground_truth_parameters, img in test_dataset.take(1):\n",
+    "    predicted_parameters = model(img, training=True)\n",
+    "    \n",
+    "    print(ground_truth_parameters)\n",
+    "    print(predicted_parameters)\n",
+    "    \n",
+    "    print(determine_diff_rotation_and_flipped(predicted_parameters, ground_truth_parameters))"
    ]
   },
   {
@@ -416,9 +487,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "optimizer = tf.keras.optimizers.Adam(2e-4, beta_1=0.5)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -444,18 +513,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# def extract_parameters(tensor_parameters):\n",
-    "#     parameters = {\n",
-    "#         'field_centre': (tensor_parameters[0], tensor_parameters[1]),\n",
-    "#         'field_side_lengths': (tensor_parameters[2], tensor_parameters[3]),\n",
-    "#         'field_rotation': tensor_parameters[4] * 180,\n",
-    "#         'bb_centre': (tensor_parameters[5], tensor_parameters[6]),\n",
-    "#         'bb_diameter': tensor_parameters[7]\n",
-    "#     }\n",
-    "    \n",
-    "#     return parameters"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -496,7 +554,7 @@
     "        new_predicted_parameters = tf.concat([\n",
     "            ground_truth_parameters[:, 0:7], \n",
     "            predicted_parameters[:, 7::],\n",
-    "        ], axis=-1)    \n",
+    "        ], axis=-1)\n",
     "        \n",
     "    return new_predicted_parameters"
    ]
@@ -509,18 +567,18 @@
    "source": [
     "BATCH_SIZE = 10\n",
     "\n",
-    "test_dataset = create_pipeline_dataset(1)\n",
     "train_dataset = create_pipeline_dataset(BATCH_SIZE)\n",
+    "optimizer = tf.keras.optimizers.Adam(learning_rate=0.1, beta_1=0.5)\n",
     "\n",
     "\n",
     "@tf.function(experimental_relax_shapes=True)\n",
     "def train_step(ground_truth_parameters, input_image):\n",
-    "    FOCUS = 'bb_centre'\n",
+    "    FOCUS = 'field_centre'\n",
     "    \n",
     "    with tf.GradientTape() as tape:\n",
     "        predicted_parameters = model(input_image, training=True)\n",
-    "        new_predicted_parameters = training_focus(\n",
-    "            predicted_parameters, ground_truth_parameters, FOCUS)\n",
+    "#         new_predicted_parameters = training_focus(\n",
+    "#             predicted_parameters, ground_truth_parameters, FOCUS)\n",
     "        \n",
     "        loss = cost_function(new_predicted_parameters, ground_truth_parameters)\n",
     "\n",
@@ -592,6 +650,13 @@
     "\n",
     "fit(train_dataset, EPOCHS, test_dataset)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
