demonstrate flip issue
Former-commit-id: 47eb3706fe99598f6f64665c7caf093a4926c390 [formerly ba3e687ffaed4fab40c2f547d8fdb411bb5c3425]
Former-commit-id: 714626318366dde5be4bd613e358b4e8b1b81e1f

--- a/examples/site-specific/cancer-care-associates/production/Winston Lutz/prototyping/tf_model/000-attempt-arbitrary-shape-encoder.ipynb
+++ b/examples/site-specific/cancer-care-associates/production/Winston Lutz/prototyping/tf_model/000-attempt-arbitrary-shape-encoder.ipynb
@@ -400,6 +400,13 @@
     "\n",
     "\n",
     "for parameters, img in create_pipeline_dataset(4).take(1):\n",
+    "    \n",
+    "    flipped_parameters = flip_parameters(parameters)\n",
+    "    print(determine_diff_with_rotation(parameters, parameters))\n",
+    "    print(determine_diff_with_rotation(parameters, flipped_parameters))\n",
+    "    \n",
+    "    print()\n",
+    "    \n",
     "    print(determine_diff_with_rotation(parameters, parameters + 1))\n",
     "    print(determine_diff_with_rotation(parameters, adjust_rotation(parameters, 1)))\n",
     "    print(determine_diff_with_rotation(parameters, adjust_rotation(parameters, 90)))\n",
